--- a/Code/Lecture13.ipynb
+++ b/Code/Lecture13.ipynb
@@ -2,11 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/albarron/anaconda/lib/python2.7/site-packages/matplotlib/font_manager.py:273: UserWarning: Matplotlib is building the font cache using fc-list. This may take a moment.\n",
+      "  warnings.warn('Matplotlib is building the font cache using fc-list. This may take a moment.')\n"
+     ]
+    }
+   ],
    "source": [
     "# usual imports\n",
     "import numpy as np\n",
@@ -24,14 +33,421 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Text</th>\n",
+       "      <th>Sentiment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>I try not to adjust the volume setting to avoi...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>So there is no way for me to plug it in here i...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Good case, Excellent value.</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>I thought Motorola made reliable products!.</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Battery for Motorola Razr.</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Great for the jawbone.</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>When I got this item it was larger than I thou...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>(I looked for one that specifically said DCU-6...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>The first time it was turned on the screen dis...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>In some programs clicking it is the same as hi...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Tied to charger for conversations lasting more...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>The mic is great.</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>What happened was that I only had like 70 cont...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>I have to jiggle the plug to get it to line up...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>I bought five of thes for less than five dollars.</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>If you have several dozen or several hundred c...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>I had the two year contract for this service.</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>If you are Razr owner...you must have this!</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Needless to say, I wasted my money.</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>If money is no constraint then just go for it.</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Try texting fast with it...4.</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>What a waste of money and time!.</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>If you buy this phone and have problems, you n...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>This company will not give me back all of my m...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>And the sound quality is great.</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>It made sense.</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>He was very impressed when going from the orig...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>Others have complained of chipping paint but i...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>I'm giving it a third try because I really wan...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>If the two were seperated by a mere 5+ ft I st...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14579</th>\n",
+       "      <td>This phone isn't all that great.</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14580</th>\n",
+       "      <td>Lives up to all the expected demands.</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14581</th>\n",
+       "      <td>I did notice that it said &amp;#34;Made in China&amp;#...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14582</th>\n",
+       "      <td>All I have to compare this product with is the...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14583</th>\n",
+       "      <td>It was well worth getting.</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14584</th>\n",
+       "      <td>It is not just me, 3 people in my office have ...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14585</th>\n",
+       "      <td>Works Great!.</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14586</th>\n",
+       "      <td>If you like for people to hear you when you ta...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14587</th>\n",
+       "      <td>The first thing I'll mention is the blatant li...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14588</th>\n",
+       "      <td>After months of searching, I finally found acc...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14589</th>\n",
+       "      <td>This product WORKS!.</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14590</th>\n",
+       "      <td>We wanted to be able to contact them.</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14591</th>\n",
+       "      <td>When I bought the Lenmar CBD366 via Amazon, it...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14592</th>\n",
+       "      <td>you don't have to have be near a wifi hot spot...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14593</th>\n",
+       "      <td>Also, to access the mp3 you need to install a ...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14594</th>\n",
+       "      <td>Not spectacular.</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14595</th>\n",
+       "      <td>Because leaving it in my ear was chancy at bes...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14596</th>\n",
+       "      <td>nice garbage....literally.</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14597</th>\n",
+       "      <td>Connection problems.</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14598</th>\n",
+       "      <td>After two days of use, one of the audio channe...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14599</th>\n",
+       "      <td>But that i can sell it and make my money.</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14600</th>\n",
+       "      <td>What warranty?.</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14601</th>\n",
+       "      <td>Like I said, the design is great.The hardware ...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14602</th>\n",
+       "      <td>They promised that they are reviewing the poss...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14603</th>\n",
+       "      <td>Found one here thru Eforcity.</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14604</th>\n",
+       "      <td>The screen on my phone said \"Not Charging\".</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14605</th>\n",
+       "      <td>This is my 4th Samsung cell phone with T-Mobile.</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14606</th>\n",
+       "      <td>great company.</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14607</th>\n",
+       "      <td>The \"call\" and \"hang-up\" keys are now properly...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14608</th>\n",
+       "      <td>Hopefully the Kyocera will be better!</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>14609 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                    Text  Sentiment\n",
+       "0      I try not to adjust the volume setting to avoi...        NaN\n",
+       "1      So there is no way for me to plug it in here i...          0\n",
+       "2                            Good case, Excellent value.          1\n",
+       "3            I thought Motorola made reliable products!.        NaN\n",
+       "4                             Battery for Motorola Razr.        NaN\n",
+       "5                                 Great for the jawbone.          1\n",
+       "6      When I got this item it was larger than I thou...        NaN\n",
+       "7      (I looked for one that specifically said DCU-6...        NaN\n",
+       "8      The first time it was turned on the screen dis...        NaN\n",
+       "9      In some programs clicking it is the same as hi...        NaN\n",
+       "10     Tied to charger for conversations lasting more...          0\n",
+       "11                                     The mic is great.          1\n",
+       "12     What happened was that I only had like 70 cont...        NaN\n",
+       "13     I have to jiggle the plug to get it to line up...          0\n",
+       "14     I bought five of thes for less than five dollars.        NaN\n",
+       "15     If you have several dozen or several hundred c...          0\n",
+       "16         I had the two year contract for this service.        NaN\n",
+       "17           If you are Razr owner...you must have this!          1\n",
+       "18                   Needless to say, I wasted my money.          0\n",
+       "19        If money is no constraint then just go for it.        NaN\n",
+       "20                         Try texting fast with it...4.        NaN\n",
+       "21                      What a waste of money and time!.          0\n",
+       "22     If you buy this phone and have problems, you n...        NaN\n",
+       "23     This company will not give me back all of my m...        NaN\n",
+       "24                       And the sound quality is great.          1\n",
+       "25                                        It made sense.        NaN\n",
+       "26     He was very impressed when going from the orig...          1\n",
+       "27     Others have complained of chipping paint but i...        NaN\n",
+       "28     I'm giving it a third try because I really wan...        NaN\n",
+       "29     If the two were seperated by a mere 5+ ft I st...          0\n",
+       "...                                                  ...        ...\n",
+       "14579                   This phone isn't all that great.        NaN\n",
+       "14580              Lives up to all the expected demands.        NaN\n",
+       "14581  I did notice that it said &#34;Made in China&#...        NaN\n",
+       "14582  All I have to compare this product with is the...        NaN\n",
+       "14583                         It was well worth getting.        NaN\n",
+       "14584  It is not just me, 3 people in my office have ...        NaN\n",
+       "14585                                      Works Great!.        NaN\n",
+       "14586  If you like for people to hear you when you ta...        NaN\n",
+       "14587  The first thing I'll mention is the blatant li...        NaN\n",
+       "14588  After months of searching, I finally found acc...        NaN\n",
+       "14589                               This product WORKS!.        NaN\n",
+       "14590              We wanted to be able to contact them.        NaN\n",
+       "14591  When I bought the Lenmar CBD366 via Amazon, it...        NaN\n",
+       "14592  you don't have to have be near a wifi hot spot...        NaN\n",
+       "14593  Also, to access the mp3 you need to install a ...        NaN\n",
+       "14594                                   Not spectacular.        NaN\n",
+       "14595  Because leaving it in my ear was chancy at bes...        NaN\n",
+       "14596                         nice garbage....literally.        NaN\n",
+       "14597                               Connection problems.        NaN\n",
+       "14598  After two days of use, one of the audio channe...        NaN\n",
+       "14599          But that i can sell it and make my money.        NaN\n",
+       "14600                                    What warranty?.        NaN\n",
+       "14601  Like I said, the design is great.The hardware ...        NaN\n",
+       "14602  They promised that they are reviewing the poss...        NaN\n",
+       "14603                      Found one here thru Eforcity.        NaN\n",
+       "14604        The screen on my phone said \"Not Charging\".        NaN\n",
+       "14605   This is my 4th Samsung cell phone with T-Mobile.        NaN\n",
+       "14606                                     great company.        NaN\n",
+       "14607  The \"call\" and \"hang-up\" keys are now properly...        NaN\n",
+       "14608              Hopefully the Kyocera will be better!        NaN\n",
+       "\n",
+       "[14609 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"../Data/amazon_cells_labelled.txt\",names=['Text','Sentiment'],na_values=np.nan,sep='\\t',error_bad_lines=False)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "rows = []\n",
-    "with open('/Users/hamed/Desktop/SF-DAT-20/SF-DAT-20/Data/amazon_cells_labelled.txt') as f:\n",
+    "with open('../Data/amazon_cells_labelled.txt') as f:\n",
     "    for i,line in enumerate(f.readlines()):\n",
     "        row = (line.split('\\n')[0]).split('\\t')\n",
     "        if row[1] == '':\n",
@@ -43,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -99,7 +515,7 @@
        "4                         Battery for Motorola Razr.        NaN"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
