Lecture Notes posted

--- a/Code/Lecture15.ipynb
+++ b/Code/Lecture15.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Exploring Rossmann Drig Store Sales Data"
+    "#### Exploring Rossmann Drug Store Sales Data"
    ]
   },
   {
@@ -1138,9 +1138,12 @@
     "\n",
     "model = ARIMA(train, (2, 0, 0)).fit()\n",
     "model.summary()\n",
-    "predictions = model.predict(start = '2014-12-14',end = '2015-08-02',dynamic = true)\n",
+    "predictions = model.predict(start = '2014-12-14',end = '2015-08-02')\n",
+    "\n",
+    "#predictions = model.predict(start = '2014-12-14',end = '2015-08-02',dynamic = False, typ ='levels')\n",
+    "# if you set ARIMA(p,d > 0,q) then you cannot measure test error this way \n",
     "from sklearn.metrics import mean_absolute_error\n",
-    "SE = (mean_absolute_error((test), predictions))**.5   # if you set ARIMA(p,d > 0,q) then you cannot measure test error this way \n",
+    "SE = (mean_absolute_error((test), predictions))**.5   \n",
     "print SE"
    ]
   },
