Finished homework I think

--- a/HW assignments/HW4/HW4-Starter-Code.ipynb
+++ b/HW assignments/HW4/HW4-Starter-Code.ipynb
@@ -492,11 +492,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.95349146468\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn import cross_validation\n",
     "kf = cross_validation.KFold(len(SpamData), n_folds = 10, shuffle = True)\n",
@@ -519,16 +527,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0.074524619059536057, 'capital_run_length_total'),\n",
+       " (0.060312863987940397, 'capital_run_length_longest'),\n",
+       " (0.056167780262260929, 'word_freq_you'),\n",
+       " (0.054858138825738548, 'char_freq_!'),\n",
+       " (0.048475452661346501, 'capital_run_length_average'),\n",
+       " (0.043069459996762614, 'word_freq_our'),\n",
+       " (0.037563240127025083, 'word_freq_free'),\n",
+       " (0.036079734006393506, 'word_freq_your'),\n",
+       " (0.030372413761498927, 'char_freq_('),\n",
+       " (0.029577917634411189, 'word_freq_remove'),\n",
+       " (0.028589180055058058, 'word_freq_will'),\n",
+       " (0.026069908736360527, 'char_freq_;'),\n",
+       " (0.023876045789116715, 'word_freq_email'),\n",
+       " (0.023209558908488893, 'word_freq_business'),\n",
+       " (0.022870609500136585, 'word_freq_re'),\n",
+       " (0.022131653251977475, 'word_freq_receive'),\n",
+       " (0.021093582992723906, 'word_freq_hp'),\n",
+       " (0.020904166641859959, 'word_freq_internet'),\n",
+       " (0.020799628488887528, 'word_freq_650'),\n",
+       " (0.019417440018986806, 'char_freq_$'),\n",
+       " (0.01925814719406237, 'word_freq_edu'),\n",
+       " (0.016883678373164294, 'word_freq_make'),\n",
+       " (0.016416043249577243, 'word_freq_money'),\n",
+       " (0.016390380496408584, 'word_freq_mail'),\n",
+       " (0.01533525747450171, 'word_freq_report'),\n",
+       " (0.014103669635329632, 'word_freq_over'),\n",
+       " (0.013454978152653254, 'word_freq_all'),\n",
+       " (0.013425324170677931, 'word_freq_credit'),\n",
+       " (0.01309963614497224, 'word_freq_george'),\n",
+       " (0.012717911294694878, 'word_freq_order'),\n",
+       " (0.012476337592495414, 'word_freq_meeting'),\n",
+       " (0.012414772688073431, 'word_freq_1999'),\n",
+       " (0.011036157841209225, 'word_freq_3d'),\n",
+       " (0.01011724016713424, 'word_freq_project'),\n",
+       " (0.0094674892088901438, 'word_freq_data'),\n",
+       " (0.0090732403555042005, 'word_freq_font'),\n",
+       " (0.0085875760306540466, 'word_freq_conference'),\n",
+       " (0.0082508502755899247, 'word_freq_technology'),\n",
+       " (0.0082159726812503428, 'word_freq_pm'),\n",
+       " (0.0073737695586172736, 'word_freq_000'),\n",
+       " (0.0058586808442008939, 'word_freq_parts'),\n",
+       " (0.0057246509046106628, 'word_freq_direct'),\n",
+       " (0.0049951575351568564, 'char_freq_['),\n",
+       " (0.0046128549954188355, 'word_freq_lab'),\n",
+       " (0.0044659247933470326, 'char_freq_#'),\n",
+       " (0.0042734174286992929, 'word_freq_people'),\n",
+       " (0.0041428951519165225, 'word_freq_labs'),\n",
+       " (0.0041033303551199626, 'word_freq_address'),\n",
+       " (0.0040213968942384992, 'word_freq_hpl'),\n",
+       " (0.0033159639727917993, 'word_freq_original'),\n",
+       " (0.0023245491204467628, 'word_freq_85'),\n",
+       " (0.0015008101393898159, 'word_freq_cs'),\n",
+       " (0.0013385345118975078, 'word_freq_addresses'),\n",
+       " (0.0010434692683289756, 'word_freq_telnet'),\n",
+       " (0.00021653679246598907, 'word_freq_table'),\n",
+       " (0.0, 'word_freq_857'),\n",
+       " (0.0, 'word_freq_415')]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted(zip(boost.feature_importances_,X.columns.values),reverse=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest cv: 0.950666320853\n",
+      "Random Forest max features: 8\n",
+      "Gradient Boosting cv: 0.95349146468\n",
+      "Gradient Boosting depth: 2\n"
+     ]
+    }
+   ],
    "source": [
     "print \"Random Forest cv:\",Tree_CV\n",
-    "print \"Random Forest max features: 8\",\n",
+    "print \"Random Forest max features: 8\"\n",
     "print \"Gradient Boosting cv:\",Boost_CV\n",
     "print \"Gradient Boosting depth: 2\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From Random Forest:\n",
+    "- (0.1313676982183323, 'char_freq_!'),\n",
+    "- (0.1131304402013074, 'char_freq_$'),\n",
+    "- (0.08676358363608172, 'word_freq_remove'),\n",
+    "- (0.070752406119580655, 'word_freq_free'),\n",
+    "- (0.066936070294168717, 'capital_run_length_average'),\n",
+    "- (0.061154554046219632, 'word_freq_your'),\n",
+    " \n",
+    "From Gradient Boost:\n",
+    "- (0.074524619059536057, 'capital_run_length_total'),\n",
+    "- (0.060312863987940397, 'capital_run_length_longest'),\n",
+    "- (0.056167780262260929, 'word_freq_you'),\n",
+    "- (0.054858138825738548, 'char_freq_!'),\n",
+    "- (0.048475452661346501, 'capital_run_length_average'),"
    ]
   },
   {
