--- a/Code/Lecture15.ipynb
+++ b/Code/Lecture15.ipynb
@@ -2,11 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/albarron/anaconda/lib/python2.7/site-packages/matplotlib/font_manager.py:273: UserWarning: Matplotlib is building the font cache using fc-list. This may take a moment.\n",
+      "  warnings.warn('Matplotlib is building the font cache using fc-list. This may take a moment.')\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -23,13 +32,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "DataStore = pd.read_csv(\"https://raw.githubusercontent.com/ga-students/SF-DAT-20/master/Data/rossmann.csv\",low_memory=False)"
+    "DataStore = pd.read_csv(\"../Data/rossmann.csv\",low_memory=False)"
    ]
   },
   {
@@ -1164,7 +1173,7 @@
     "#predictions = model.predict(start = '2014-12-14',end = '2015-08-02',dynamic = False, typ ='levels')\n",
     "# if you set ARIMA(p,d > 0,q) then you cannot measure test error this way \n",
     "from sklearn.metrics import mean_absolute_error\n",
-    "SE = (mean_absolute_error((test), predictions))**.5   \n",
+    "SE = (mean_absolute_error((test), predictions))**.5 #should be mean_square_error, not absolute\n",
     "print SE"
    ]
   },
