--- a/Code/Lecture15.ipynb
+++ b/Code/Lecture15.ipynb
@@ -1173,7 +1173,7 @@
     "#predictions = model.predict(start = '2014-12-14',end = '2015-08-02',dynamic = False, typ ='levels')\n",
     "# if you set ARIMA(p,d > 0,q) then you cannot measure test error this way \n",
     "from sklearn.metrics import mean_absolute_error\n",
-    "SE = (mean_absolute_error((test), predictions))**.5 #should be mean_square_error, not absolute\n",
+    "SE = (mean_absolute_error((test), predictions))**.5\n",
     "print SE"
    ]
   },
